<?xml version="1.0"?>
<package format="2">
  <name>bot_ui</name>
  <version>0.0.0</version>
  <description>The bot_ui package</description>

  <maintainer email="phild@protonmail.com">phil</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
</package>
