<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bot_ui</name>
  <version>0.0.0</version>
  <description>The bot_ui package</description>

  <maintainer email="phild@protonmail.com">phil</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>rosboard</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
